// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Topic tests on ios should render HeadContainer correctly 1`] = `
<View
  className="responsive-styles__component-fbPFZZ eMLchy"
/>
`;

exports[`Topic tests on ios should render ResponsiveDivider correctly 1`] = `
<View
  className="responsive-styles__component-fbPFZZ sAowN"
/>
`;

exports[`Topic tests on ios should render ResponsiveName correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  className="responsive-styles__component-fbPFZZ MUkSZ"
  ellipsizeMode="tail"
/>
`;

exports[`Topic tests on ios should render correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F9F8F3",
      "flexDirection": "column",
      "minHeight": 120,
      "paddingBottom": 40,
      "paddingHorizontal": 10,
      "paddingTop": 30,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
      }
    }
  >
    <Text
      accessibilityLabel="topic-name"
      accessibilityRole="heading"
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#1D1D1B",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 40,
          "paddingBottom": 20,
        }
      }
      testID="topic-name"
    >
      Animals
    </Text>
  </View>
</View>
`;

exports[`Topic tests on ios should render correctly when loading 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F9F8F3",
      "flexDirection": "column",
      "minHeight": 120,
      "paddingBottom": 40,
      "paddingHorizontal": 10,
      "paddingTop": 30,
      "width": "100%",
    }
  }
/>
`;

exports[`Topic tests on ios should render correctly with a description 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F9F8F3",
      "flexDirection": "column",
      "minHeight": 120,
      "paddingBottom": 40,
      "paddingHorizontal": 10,
      "paddingTop": 30,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
      }
    }
  >
    <Text
      accessibilityLabel="topic-name"
      accessibilityRole="heading"
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#1D1D1B",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 40,
          "paddingBottom": 20,
        }
      }
      testID="topic-name"
    >
      Animals
    </Text>
    <View
      style={
        Object {
          "borderStyle": "solid",
          "borderTopColor": "#DBDBDB",
          "borderTopWidth": 1,
          "justifyContent": "center",
          "width": 199,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesDigitalW04",
          "fontSize": 15,
          "lineHeight": 26,
          "paddingTop": 20,
          "textAlign": "center",
        }
      }
      testID="topic-description"
    >
      Animals are multicellular eukaryotic organisms.
    </Text>
  </View>
</View>
`;
